# guepard-cli

./: .env  .env.example  .gitignore  BUILD_SETUP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMAND_REFERENCE.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  GRAPH_MOCK_EXAMPLE.txt  HOMEBREW_CORE_SUBMISSION.md  LICENCE  MULTI_PLATFORM_GUIDE.md  Makefile  README.md  RELEASE_SUMMARY.md  RELEASE_TEMPLATE.md  build-linux.sh  build-local.sh  build.sh  env.example  gprd-wrapper  setup-chocolatey.sh  setup-github-tap.sh  setup-homebrew-tap.sh  setup-snap.sh  test-homebrew-formula.sh
.github/workflows/: build-linux.yml  build-release.yml  build-test.yaml  build.yml  package-linux.yml  package-macos.yml  package-windows.yml  prepare-homebrew-core.yml  publish-choco.yml  publish-homebrew.yml  publish-snap.yml  release-linux.yml  release.yml  submit-homebrew-core.yml  test-pipeline.yml
Formula/: guepard.rb
chocolatey/: gfs.nuspec  guepard.nuspec
chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
debian/etc/guepard/: environment
docs/: BUILD_SETUP.md  COMMAND_REFERENCE.md  HOMEBREW_CORE_SUBMISSION.md  HOMEBREW_GUIDE.md  MULTI_PLATFORM_GUIDE.md  RELEASE_TEMPLATE.md  TESTING_WORKFLOW.md  Tuto.md
docs/documentation/: README.md  authentication.md  branches-snapshots.md  commands.md  concepts.md  deployments.md  examples.md  installation.md  quick-start.md  tenet.md  troubleshooting.md  workflows.md
docs/rfcs/: 001-cli-specs.md
homebrew-tap/Formula/: gfs.rb  guepard.rb
schema/: 0.4.4-public.json
scripts/: e2e_test.sh  f2_test_flow.sh  tenet-e2e-api-dev.sh  tenet-e2e-from-deploy.sh  tenet-proxy-rules-alt-email-only.yaml  tenet-proxy-rules-alt-mixed.yaml  tenet-proxy-rules-alt-partial.yaml  tenet-proxy-rules.min.yaml  test-db-connection.sh
scripts/sql/: tenet_masking_grant_dev.sql  tenet_masking_seed.sql
scripts/test/: .gitignore  env.sh  step-1-deploy.sh  step-2-tenet.sh  step-3-test.sh
scripts/test/proxy/: tenant-a-redact-all.yaml  tenant-b-partial.yaml  tenant-c-passthrough.yaml
scripts/test/sql/: seed.sql
snap/: snapcraft.yaml
src/: cli.rs  config.rs  lib.rs  structure.rs
src/application/: auth.rs  mod.rs  output.rs
src/application/commands/: autostop.rs  bookmark.rs  branch.rs  checkout.rs  clone.rs  commit.rs  compute.rs  config.rs  deploy.rs  deployment.rs  init.rs  link.rs  list.rs  log.rs  login.rs  logout.rs  mod.rs  node.rs  rev_parse.rs  show.rs  tenet.rs  usage.rs  volume.rs
src/application/dto/: autostop.rs  bookmark_dto.rs  branch.rs  branch_dto.rs  clone.rs  commit.rs  compute.rs  compute_dto.rs  deploy.rs  deploy_dto.rs  deployment_dto.rs  link.rs  log.rs  login.rs  login_dto.rs  mod.rs  node.rs  tenet.rs  usage.rs  volume_dto.rs
src/application/services/: autostop.rs  bookmark_service.rs  branch.rs  branch_service.rs  clone.rs  commit.rs  compute.rs  compute_service.rs  deploy.rs  deploy_service.rs  deployment_service.rs  link.rs  link_service.rs  login.rs  login_service.rs  mod.rs  node.rs  performance.rs  show.rs  show_service.rs  tenet.rs  usage.rs  usage_service.rs  utils.rs  volume_service.rs
src/config/: config.rs
src/domain/errors/: bookmark_error.rs  branch_error.rs  compute_error.rs  config_error.rs  deploy_error.rs  deployment_error.rs  link_error.rs  login_error.rs  logout_error.rs  mod.rs  tenet_error.rs  usage_error.rs  volume_error.rs
src/domain/model/: command.rs  host.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/adapter/engine/: engine_adapter.rs  local_connector.rs  mod.rs
src/infrastructure/adapter/engine/fixtures/: os_version  zfs_get  zfs_list  zfs_version  zpool_create  zpool_list  zpool_status
src/infrastructure/utils/: local_connector.rs  mod.rs
(+3 files in other folders)
