[package]
name = "guepard-cli"
authors = ["Guepard Engineering <engineering@guepard.run>"]
description = "Guepard CLI - Git-like filesystem for databases"
license = "Guepard (c) 2025"
homepage = "https://www.guepard.run"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Guepard-Corp/guepard-cli.git"
version = "0.27.9"
keywords = ["database", "filesystem", "cli", "git", "versioning"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "guepard"
path = "src/cli.rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.109"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
pest = "2.7.5"
pest_derive = "2.7.5"
anyhow = "1.0.56"
#Adding the reqwest crate to the dependencies section
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
# CLI
clap = { version = "4.5.7", features = ["derive"] }
# For Logging support
log = "0.4.20"
env_logger = "0.11.5"
# Added for using env variables
dotenv = "0.15.0"
thiserror = "2.0.11"
tabled = "0.15"  # For tabular output
colored = "2"    # For colored text
dirs = "6.0.0"
chrono = { version = "0.4.40", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native"], optional = true }

[build-dependencies]
mockall = "0.13.0"

# Multi-platform build configuration
[package.metadata.deb]
copyright = "Guepard (c) 2025"
maintainer = "Guepard Engineering <engineering@guepard.run>"
depends = ""
section = "utility"
priority = "optional"
assets = [
    # binary
    ["target/release/guepard", "usr/bin/", "755"],
]

# Cross-compilation targets
[package.metadata.cross]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-gnu",
    "aarch64-pc-windows-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]

# Platform-specific features
[features]
default = []
apple-keyring = ["keyring", "keyring/apple-native"]
windows-keyring = ["keyring", "keyring/windows-native"]
linux-keyring = ["keyring", "keyring/sync-secret-service"]
cross-compile = []  # Disable keyring for cross-compilation
